--- a/hello/pom.xml
+++ b/hello/pom.xml
@@ -9,9 +9,12 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <maven.compiler.source>23</maven.compiler.source>
-        <maven.compiler.target>23</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.target>1.23</maven.compiler.target>
+        <maven.compiler.source>1.23</maven.compiler.source>
     </properties>
+
+    <dependencies>
+    </dependencies>
+
 
 </project>
